@@ -21,6 +21,8 @@ Summary of important user-visible changes for statistics 1.4.3:
  ** mhsample.m         (patch #10016)
  
  ** optimalleaforder.m (patch #10034)
+
+ ** silhouette         (patch #9743)
  
  ** slicesample        (patch #10019)
 
